Completed assignment detail page and wiki page. Fixed various layout bugs and added a few missing features.

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -248,10 +248,10 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top: 3px solid #000000;
 }
 .sr-only {
   position: absolute;
@@ -423,8 +423,8 @@ h3 {
 h4,
 h5,
 h6 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 h1,
 .h1 {
@@ -5913,4 +5913,7 @@ td.visible-print {
   overflow: hidden;
   -webkit-transition: height 0.35s ease;
   transition: height 0.35s ease;
+}
+.navbar-static-top {
+  margin-bottom: 0px;
 }
